Create new jar file